# digpaper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: README.md  copilot-instructions.md
.github/workflows/: build-android.yml  build-ios.yml  build.yml
.planning/: phase1.md  phase2.md  phase3.md  roadmap.md
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
src/: auth.rs  db.rs  error.rs  main.rs  models.rs
src/handlers/: document_handlers.rs  email_handlers.rs  forum_handlers.rs  mod.rs  project_handlers.rs  push_handlers.rs  user_handlers.rs
src/services/: document_service.rs  email_service.rs  forum_service.rs  mod.rs  project_service.rs  push_service.rs  user_service.rs
uploads/: .gitkeep
web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  sw.js  version.json
web-react/: index.html  package-lock.json  package.json  vite.config.js
web-react/public/: manifest.json  sw.js
web-react/src/: App.jsx  db.js  styles.css
web/assets/: NOTICES  index-1q_weydH.css  index-4f9gCjDy.js  index-4kvr7lRz.css  index-7CcEuU16.js  index-B64BGO5-.css  index-BcDviXOb.css  index-Box5pR6t.js  index-BqpWZuIl.js  index-CJgv1WCw.css  index-CQv6Aien.css  index-ChzZVg8G.js  index-Cy3eUMkB.js  index-CyxjxudP.js  index-D7GhXHUp.css  index-DNgUrepb.js  index-DP370-e0.js  index-DPkfih_M.js  index-DR1btq7P.js  index-DSLF2-F0.js  (+10 more)
(+25 files in other folders)
